add inputs in form

--- a/src/assets/variables.css
+++ b/src/assets/variables.css
@@ -20,7 +20,7 @@
 
 	/*--brand-dark: #a6c5e3;
 	--brand-light: #e9f2f3;
-	--gray-color: rgba(0, 0, 0, 0.5);
+	--gray-color: rgba(0, 0, 0, 0.5); --gray-dark
 	--dark-transparent: rgba(0, 0, 0, 0.8);
 	--dark-gray: #49535c;
 	--light-color: #f5f4f4;
