--- a/src/assets/variables.css
+++ b/src/assets/variables.css
@@ -22,7 +22,7 @@
 	--brand-light: #e9f2f3;
 	--gray-color: rgba(0, 0, 0, 0.5); --gray-dark
 	--dark-transparent: rgba(0, 0, 0, 0.8);
-	--dark-gray: #49535c;
+	--dark-gray: #49535c;  --gray-medium
 	--light-color: #f5f4f4;
 	--dark-color: #d9d9d9; --gray-light
 	--black-color: #000;
