--- a/src/assets/variables.css
+++ b/src/assets/variables.css
@@ -16,10 +16,11 @@
 	--gray-dark: rgba(0, 0, 0, 0.5);
 
 	/* Functional Colors */
+	--success: #09996e;
 	--error: #e62e2e;
 
 	/*--brand-dark: #a6c5e3;
-	--brand-light: #e9f2f3;
+	--brand-light: #e9f2f3; --brand-secondary
 	--gray-color: rgba(0, 0, 0, 0.5); --gray-dark
 	--dark-transparent: rgba(0, 0, 0, 0.8);
 	--dark-gray: #49535c;  --gray-medium
