add ProfileLinks, docs

--- a/src/assets/variables.css
+++ b/src/assets/variables.css
@@ -19,19 +19,7 @@
 	--success: #09996e;
 	--error: #e62e2e;
 
-	/*--brand-dark: #a6c5e3;
-	--brand-light: #e9f2f3; --brand-secondary
-	--gray-color: rgba(0, 0, 0, 0.5); --gray-dark
-	--dark-transparent: rgba(0, 0, 0, 0.8);
-	--dark-gray: #49535c;  --gray-medium
-	--light-color: #f5f4f4;
-	--dark-color: #d9d9d9; --gray-light
-	--black-color: #000;
-	--white-color: #fff;
-	--error-color: #e62e2e;
-	--brand-gradient: linear-gradient(180deg, #E9F2F3 0%, #A6C5E3 100%);*/
-
-
+	/* Fonts */
 	--aeroport: "Aeroport", serif;
 	--roboto: "Roboto", serif;
 	--inter-regular: "Inter-Regular", serif;
